<?xml version="1.0"?>
<package format="3">
    <name>wrench2thrust</name>
    <version>0.0.1</version>
    <description>TODO: Project Short Description</description>

    <maintainer email="sky.y.m.318@gmail.com">Yusuke Mizoguchi</maintainer>
    <author email="sky.y.m.318@gmail.com">Yusuke Mizoguchi</author>

    <license>BSD</license>

    <url type="website">https://github.com/PickNikRobotics/wrench2thrust</url>
    <url type="bugtracker">https://github.com/PickNikRobotics/wrench2thrust/issues</url>
    <url type="repository">https://github.com/PickNikRobotics/wrench2thrust/</url>

    <buildtool_depend>ament_cmake</buildtool_depend>s
    <buildtool_depend>eigen3_cmake_module</buildtool_depend>
    <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>

    <depend>eigen</depend>
    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
